Description: Grant Leak when osc reconnect to OST
Details    : When osc reconnect ost, OST(filter) should check whether it
	     should grant more space to client by comparing fed_grant and
	     cl_avail_grant, and return the granted space to client instead
	     of "new granted" space, because client will call osc_init_grant
	     to update the client grant space info.

Severity   : normal
Frequency  : rare 
Bugzilla   : 12401
Description: Checking Stale with correct fid 
Details    : ll_revalidate_it should uses de_inode instead of op_data.fid2 
	     to check whether it is stale, because sometimes, we want the 
	     enqueue happened anyway, and op_data.fid2 will not be initialized.
     
Severity   : enhancement
Bugzilla   : 11647
Description: update patchless client
Details    : Add support for patchless client with 2.6.20, 2.6.21 and RHEL 5

Severity   : normal
Frequency  : only with 2.4 kernel
Bugzilla   : 12134
Description: random memory corruption
Details    : size of struct ll_inode_info is to big for union inode.u and this
             can be cause of random memory corruption.

Severity   : normal
Bugzilla   : 11737
Description: Short directio read returns full requested size rather than
             actual amount read.
Details    : Direct I/O operations should return actual amount of bytes
             transferred rather than requested size.

--------------------------------------------------------------------------------

2007-05-03  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0.1
       * bug fixes

Severity   : normal
Frequency  : on some architectures
Bugzilla   : 12404
Description: 1.6 client sometimes fails to mount from a 1.4 MDT
Details    : Uninitialized flags sometimes cause configuration commands to
	     be skipped.

Severity   : normal
Frequency  : patchless clients only
Bugzilla   : 12391
Description: missing __iget() symbol export
Details    : The __iget() symbol export is missing.  To avoid the need for